# KwasTools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.kwaslib  README.md
addons/blender/io_kwastools/: __init__.py
addons/blender/io_kwastools/common/: common.py  he_common.py
addons/blender/io_kwastools/exporters/he/: cam_anim.py  export_anim.py  uv_anim.py
addons/blender/io_kwastools/importers/he/: cam_anim.py  import_anim.py  uv_anim.py
docs/: platinum-tools.txt
kwaslib/: CMakeLists.txt  info.txt  kwas_all.h
kwaslib/core/: core_includes.h
kwaslib/core/cg/: x360_fmt.h
kwaslib/core/cpu/: endianness.c  endianness.h
kwaslib/core/crypto/: crc16.c  crc16.h  crc32.c  crc32.h  crc8.c  crc8.h  crc_utils.h
kwaslib/core/data/: cvector.c  cvector.h  dbl_link_list.c  dbl_link_list.h  vl.c  vl.h
kwaslib/core/data/image/: dds.c  dds.h  gtf.c  gtf.h  image.c  image.h  image_pixel.h  s3tc.c  s3tc.h  x360_enum.h  x360_texture.c  x360_texture.h
kwaslib/core/data/text/: sexml.c  sexml.h  sexml_defines.h  sexml_exporter.c  sexml_exporter.h  sexml_io.c  sexml_io.h  sexml_parser.c  sexml_parser.h
kwaslib/core/io/: arg_parser.c  arg_parser.h  date_utils.h  dir_list.c  dir_list.h  file_utils.c  file_utils.h  path_utils.c  path_utils.h  string_utils.c  string_utils.h  type_readers.h  type_writers.h
kwaslib/core/math/: boundary.c  boundary.h  half.h  vec.c
kwaslib/cri/: acb_command.c  acb_command.h  awb.c  awb.h  cri_includes.h  utf.c  utf.h
kwaslib/cri/acb/: acb_command.c  acb_command.h  acb_command_opcodes.h  acb_command_readers.h  acb_waveform.h
kwaslib/cri/archive/: afs.c  afs.h  afs_export.c  afs_export.h  afs_parse.c  afs_parse.h
kwaslib/cri/audio/: adx.c  adx.h  awb.c  awb.h  hca.c  hca.h
kwaslib/cri/utf/: utf.c  utf.h  utf_common.c  utf_common.h  utf_data_table.c  utf_data_table.h  utf_defines.h  utf_load.c  utf_load.h  utf_save.c  utf_save.h  utf_string_table.c  utf_string_table.h  utf_table.c  utf_table.h
kwaslib/he/: BINA.c  BINA.h  cam_anim.c  cam_anim.h  he_includes.h  light.h  lit_anim.c  lit_anim.h  mat_anim.c  mat_anim.h  mirage.c  mirage.h  mirage_keyframe.c  mirage_keyframe.h  mirage_string_table.c  mirage_string_table.h  morph_anim.c  morph_anim.h  pt_anim.c  pt_anim.h  uv_anim.c  uv_anim.h  vis_anim.c  vis_anim.h
kwaslib/nw4r/: bcwav.h  brres.c  brres.h  nw4r_includes.h  scn0.c  scn0.h  srt0.c  srt0.h
kwaslib/platinum/: dat.c  dat.h  dat_hashtable.c  dat_hashtable.h  platinum_includes.h  wmb4.c  wmb4.h  wtb.c  wtb.h
kwaslib/utils/: arg_parser.c  arg_parser.h  dir_list.c  dir_list.h  file_utils.c  file_utils.h  path_utils.c  path_utils.h  type_readers.c  type_readers.h  type_writers.c
kwaslib/utils/cg/: x360_fmt.h
kwaslib/utils/cpu/: endianness.h
kwaslib/utils/io/: arg_parser.c  arg_parser.h  dir_list.h  path_utils.h  type_readers.c  type_readers.h  type_writers.c
kwaslib/utils/math/: boundary.c  boundary.h  vec.h
scripts/: cri_scramble_key.htm  cri_scramble_key.py  uvanimxml_to_godot.py
src/: build_pcmodeltool.bat  build_pcmodeltool.sh  cri_afs_tool.c  cri_awb_tool.c  cri_awb_tool.cpp  cri_utf_tool.c  cri_utf_tool.cpp  he_anim_tool.c  he_anim_tool.cpp  nw4r_misc_to_he_xml.cpp  pcmodeltool.cpp  platinum_dat_tool.c  platinum_misc_dat2dds2dat.c  platinum_wmb4_tool.cpp  platinum_wta_wtp_tool.c  platinum_wtb_tool.c
src/cri/: cri_acb_cmd.h  cri_awb.h  cri_awb_tool.c  cri_utf_tool.c
src/nw4r/: nw4r_misc_to_he_xml.c
src/platinum/: platinum_dat_tool.c  platinum_wtb_tool.c
utils/: kwasutils_pugi_helper.hpp
